style: fixes battle modal scroll overflow

--- a/src/app/shared/components/battle-modal/battle-modal.component.scss
+++ b/src/app/shared/components/battle-modal/battle-modal.component.scss
@@ -12,7 +12,7 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    height: 100%;
+    height: 85%;
     overflow: auto;
     padding: 10px;
     border-radius: 15px;
@@ -82,7 +82,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        height: 100%;
+        height: auto;
         overflow: auto;
         padding: 10px;
         border-radius: 15px;
